<resources>
    <string name="app_name">HelloBolo</string>
    <string name="network">Connessione ad internet assente!</string>
    <string name="exit">Premere di nuovo per uscire</string>
    <!-- appBar -->
    <string name="searchBar_hint">Cerca qui&#8230;</string>
    <string name="busStopText">Linea:</string>
    <string name="busHourTextDefault">Partenza:</string>
    <string name="busHourTextNow">Adesso</string>
    <string name="busHourText" translatable="false">%1$d:%2$s</string>
    <!-- cardView.output -->
    <string name="busHourOutputLive">In arrivo</string>
    <string name="busHourOutputHour" translatable="false">h</string>
    <string name="busHourOutputMin" translatable="false">min</string>
    <!-- favourites -->
    <string name="no_favourites">Nessun elemento in Preferiti</string>
    <!-- spinnerDialog -->
    <string name="first_element_spinner">Tutte le linee</string>
    <!-- dialog -->
    <string name="dialog_generic_yes" translatable="false">OK</string>
    <string name="dialog_generic_no">Annulla</string>
    <string name="dialog_no_service_title">Servizio non disponibile</string>
    <string name="dialog_rss_no">Chiudi</string>
    <string name="dialog_rss_yes">Leggi</string>
    <string name="dialog_gps_message">Abilita GPS</string>
    <string name="dialog_gps_yes">Abilita</string>
    <!-- dialog.preference -->
    <string name="dialog_preference_gps_yes">Imposta</string>
    <string name="dialog_delete_log_title">Eliminare file di log?</string>
    <string name="dialog_delete_log_yes">Elimina</string>
    <string name="dialog_clear_mem_title">Vuoi aggiornare le fermate dell\'autobus?</string>
    <string name="dialog_clear_mem_warning">Attenzione! Sarà richiesto un riavvio dell\'app</string>
    <string name="dialog_clear_mem_yes">Aggiorna</string>
    <!-- navbar -->
    <string name="nav_menu_home" translatable="false">Home</string>
    <string name="nav_menu_favourites">Preferiti</string>
    <string name="nav_menu_settings">Impostazioni</string>
    <!-- timepicker -->
    <string name="time_zone" translatable="false">Europe/Rome</string>
    <!-- timepicker.button -->
    <string name="time_picker_ok">Imposta</string>
    <string name="time_picker_cancel">Annulla</string>
    <string name="time_picker_reset">Ripristina ora attuale</string>
    <!-- rss -->
    <string name="rss_error_load">C\'è stato un errore. Per favore riprova più tardi</string>
    <!-- rss.tabName -->
    <string name="tab_rss_0">Prima pagina</string>
    <string name="tab_rss_1">Tutte</string>
    <string name="tab_rss_2" translatable="false">Bologna</string>
    <!-- preference -->
    <string name="preference">Impostazioni</string>
    <!-- preference.theme -->
    <string name="preference_title_theme">Tema scuro</string>
    <string name="preference_key_theme" translatable="false">night_mode</string>
    <string name="preference_summary_theme" translatable="false">%1$s</string>
    <string name="preference_summary_theme_29" translatable="false">%1$s</string>
    <string name="theme_0">Sempre</string>
    <string name="theme_1">Automatico (segui tema di sistema)</string>
    <string name="theme_2">Mai</string>
    <!-- preference.gps -->
    <string name="preference_title_gps">Range di ricerca GPS</string>
    <string name="preference_key_gps" translatable="false">gps</string>
    <string name="preference_summary_gps">Imposta la distanza, rispetto a dove ti trovi, per la ricerca delle fermate degli autobus trmite il GPS</string>
    <string name="preference_slider_gps_text_high">Attenzione! Aumentando il range di ricerca si otterrà un numero maggiore di fermate ma sarà più lento</string>
    <!-- preference.language -->
    <string name="preference_title_language">Lingua</string>
    <string name="preference_key_language" translatable="false">lang</string>
    <string name="preference_summary_language" translatable="false">%1$s</string>
    <string name="language_0">Italiano</string>
    <string name="language_1">Inglese</string>
    <!-- preference.exit -->
    <string name="preference_key_exit" translatable="false">double_exit</string>
    <string name="preference_title_exit">Premere due volte per uscire</string>
    <!-- preference.log -->
    <string name="preference_title_open_log">Visualizza file di log</string>
    <string name="preference_key_open_log" translatable="false">open_log</string>
    <string name="preference_title_delete_log">Elimina file di log</string>
    <string name="preference_key_delete_log" translatable="false">delete_log</string>
    <!-- preference.clearMemory -->
    <string name="preference_title_clear_memory">Aggiorna le fermate degli autobus</string>
    <string name="preference_key_clear_memory" translatable="false">clear_mem</string>
    <!-- preference.license -->
    <string name="preference_title_license">Licenze</string>
    <string name="preference_key_license" translatable="false">license</string>
    <!-- preference.cardView -->
    <string name="preference_card_app_version" translatable="false">(0.0.1)</string>
    <string name="preference_card_dev">Sviluppatore</string>
    <string name="preference_card_dev_1" translatable="false">F3FFO (Federico Pierantoni)</string>
    <string name="preference_card_ackn">Ringraziamenti</string>
    <string name="preference_card_ackn_1" translatable="false">Raphael Fantini</string>
    <!-- toast -->
    <string name="toast_update_output">Aggiornato</string>
    <string name="toast_permissions">Concedere le autorizzazioni necessarie</string>
    <string name="toast_no_bus_stop">Fermata mancante</string>
    <string name="toast_favourite_added">Aggiunto ai preferiti!</string>
    <string name="toast_favourite_not_added">Hai già 10 preferiti!</string>
    <string name="toast_favourite_removed">Rimosso dai preferiti!</string>
    <string name="toast_no_bus_stop_gps">Nessuna fermata nelle vicinanze</string>
    <string name="toast_gps_error">GPS non trovato</string>
    <string name="toast_log_file_deleted">File Log cancellato</string>
    <string name="toast_no_files_deleted">Impossibile aggiornare le fermate</string>
    <!-- output -->
    <string name="output_no_lines">NESSUNA LINEA TROVATA</string>
    <string name="output_line">LINEA %1$s ASSENTE</string>
    <string name="output_no_line_managed">LINEA %1$s NON GESTITA</string>
    <string name="output_error">ERRORE</string>
    <string name="output_no_bus_stop_managed">FERMATA %1$s NON GESTITA</string>
</resources>